# SysSimPyMMEN

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  fitting_systems.rst  index.rst  installation.rst  usage.rst
examples/: plot_MMEN.py  plot_MMEN_kepler_resampling_masses.py  plot_MMEN_observed.py  plot_MMEN_observed_many.py  plot_MMEN_observed_per_system.py  plot_MMEN_observed_per_system_many.py  plot_MMEN_observed_per_system_vs_stars.py  plot_MMEN_observed_per_system_vs_stars_many.py  plot_MMEN_observed_vs_multiplicity.py  plot_MMEN_observed_vs_physical_per_system.py  plot_MMEN_observed_vs_physical_per_system_examples.py  plot_MMEN_physical.py  plot_MMEN_physical_many.py  plot_MMEN_physical_per_system.py  plot_MMEN_physical_total_mass_per_system.py  plot_MMEN_physical_total_mass_per_system_many.py  plot_MMEN_physical_vs_multiplicity.py
src/: MMEN_functions.py
src/syssimpymmen/: mmen.py
tests/: test_MMEN.py
